--- a/source/_posts/上海市未来工程师大赛游记.md
+++ b/source/_posts/上海市未来工程师大赛游记.md
@@ -6,6 +6,7 @@ id: '63'
 categories:
   - - 游记
 date: 2019-01-17 09:23:31
+cover: https://pic.zzzhxxx.top/2022/05/30/95f25d27017ee.png
 ---
 
 ## Day 1
